@@ -1110,8 +1110,10 @@ but unfortunately that does not exist (yet?)."
     (define-key map (kbd "C-q") 'transient-quit-all)
     (define-key map (kbd "C-z") 'transient-suspend)
     (define-key map (kbd "ESC ESC ESC") 'transient-quit-all)
-    (define-key map [remap scroll-up-command] 'transient-scroll-up)
-    (define-key map [remap scroll-down-command]'transient-scroll-down)
+    (define-key map (kbd "C-v") 'transient-scroll-up)
+    (define-key map (kbd "M-v") 'transient-scroll-down)
+    (define-key map [next]      'transient-scroll-up)
+    (define-key map [prior]     'transient-scroll-down)
     map)
   "Base keymap used by all transients.")
 
@@ -1124,8 +1126,10 @@ but unfortunately that does not exist (yet?)."
     (define-key map (kbd "C-q")   'transient-quit-all)
     (define-key map (kbd "C-z")   'transient-suspend)
     (define-key map (kbd "ESC ESC ESC") 'transient-quit-all)
-    (define-key map [remap scroll-up-command] 'transient-scroll-up)
-    (define-key map [remap scroll-down-command]'transient-scroll-down)
+    (define-key map (kbd "C-v") 'transient-scroll-up)
+    (define-key map (kbd "M-v") 'transient-scroll-down)
+    (define-key map [next]      'transient-scroll-up)
+    (define-key map [prior]     'transient-scroll-down)
     map)
   "Keymap that is active while a transient in is in \"edit mode\".")
 
@@ -1135,8 +1139,10 @@ but unfortunately that does not exist (yet?)."
     (define-key map (kbd "C-q") 'transient-quit-all)
     (define-key map (kbd "C-z") 'transient-suspend)
     (define-key map (kbd "ESC ESC ESC") 'transient-quit-all)
-    (define-key map [remap scroll-up-command] 'transient-scroll-up)
-    (define-key map [remap scroll-down-command]'transient-scroll-down)
+    (define-key map (kbd "C-v") 'transient-scroll-up)
+    (define-key map (kbd "M-v") 'transient-scroll-down)
+    (define-key map [next]      'transient-scroll-up)
+    (define-key map [prior]     'transient-scroll-down)
     map)
   "Keymap that is active while an incomplete key sequence is active.")
 
